Hex code were stored in array

--- a/index.html
+++ b/index.html
@@ -14,54 +14,50 @@
 
 <body>
   <div class="wrapper d-flex align-items-stretch">
+
+    <!-- Side Navbar Starts From Here -->
     <nav id="sidebar" class="active">
       <h1><a href="index.html" class="logo">C.<sub>In</sub></a></h1>
       <ul class="list-unstyled components mb-5">
         <li class="active">
-          <a href="#"><span><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M4 3H10C10.5523 3 11 3.44772 11 4V8C11 8.55228 10.5523 9 10 9H4C3.44772 9 3 8.55228 3 8V4C3 3.44772 3.44772 3 4 3ZM5 7H9V5H5V7ZM10 11H4C3.44772 11 3 11.4477 3 12V20C3 20.5523 3.44772 21 4 21H10C10.5523 21 11 20.5523 11 20V12C11 11.4477 10.5523 11 10 11ZM5 19H9V13H5V19ZM20 15H14C13.4477 15 13 15.4477 13 16V20C13 20.5523 13.4477 21 14 21H20C20.5523 21 21 20.5523 21 20V16C21 15.4477 20.5523 15 20 15ZM15 19H19V17H15V19ZM20 3H14C13.4477 3 13 3.44772 13 4V12C13 12.5523 13.4477 13 14 13H20C20.5523 13 21 12.5523 21 12V4C21 3.44772 20.5523 3 20 3ZM15 11H19V5H15V11Z"
-                  fill="#565656"></path>
-              </svg></span> Color Palettes</a>
+          <a href="#"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M4 3H10C10.5523 3 11 3.44772 11 4V8C11 8.55228 10.5523 9 10 9H4C3.44772 9 3 8.55228 3 8V4C3 3.44772 3.44772 3 4 3ZM5 7H9V5H5V7ZM10 11H4C3.44772 11 3 11.4477 3 12V20C3 20.5523 3.44772 21 4 21H10C10.5523 21 11 20.5523 11 20V12C11 11.4477 10.5523 11 10 11ZM5 19H9V13H5V19ZM20 15H14C13.4477 15 13 15.4477 13 16V20C13 20.5523 13.4477 21 14 21H20C20.5523 21 21 20.5523 21 20V16C21 15.4477 20.5523 15 20 15ZM15 19H19V17H15V19ZM20 3H14C13.4477 3 13 3.44772 13 4V12C13 12.5523 13.4477 13 14 13H20C20.5523 13 21 12.5523 21 12V4C21 3.44772 20.5523 3 20 3ZM15 11H19V5H15V11Z"
+                fill="#565656"></path>
+            </svg> <span>Color Palettes</span> </a>
         </li>
         <li>
-          <a href="#"><span><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M19 3H5C3.89543 3 3 3.89543 3 5V19C3 20.1046 3.89543 21 5 21H19C20.1046 21 21 20.1046 21 19V5C21 3.89543 20.1046 3 19 3ZM19 5V12H17V10.25C17 10.1119 16.8881 10 16.75 10H15.25C15.1119 10 15 10.1119 15 10.25V12H13V10.25C13 10.1119 12.8881 10 12.75 10H11.25C11.1119 10 11 10.1119 11 10.25V12H9V10.25C9 10.1119 8.88807 10 8.75 10H7.25C7.11193 10 7 10.1119 7 10.25V12H5V5H19ZM7 12V14H9V12H7ZM11 12V14H13V12H11ZM15 12V14H17V12H15Z"
-                  fill="#565656"></path>
-              </svg></span> Gradients</a>
+          <a href="#"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M19 3H5C3.89543 3 3 3.89543 3 5V19C3 20.1046 3.89543 21 5 21H19C20.1046 21 21 20.1046 21 19V5C21 3.89543 20.1046 3 19 3ZM19 5V12H17V10.25C17 10.1119 16.8881 10 16.75 10H15.25C15.1119 10 15 10.1119 15 10.25V12H13V10.25C13 10.1119 12.8881 10 12.75 10H11.25C11.1119 10 11 10.1119 11 10.25V12H9V10.25C9 10.1119 8.88807 10 8.75 10H7.25C7.11193 10 7 10.1119 7 10.25V12H5V5H19ZM7 12V14H9V12H7ZM11 12V14H13V12H11ZM15 12V14H17V12H15Z"
+                fill="#565656"></path>
+            </svg> <span>Gradients</span> </a>
         </li>
         <li>
-          <a href="#"><span><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M2 12.55V14.31C2.00035 14.7077 2.15862 15.089 2.44 15.37L8.63 21.56C8.91103 21.8414 9.29231 21.9996 9.69 22H10.45C10.8477 21.9996 11.229 21.8414 11.51 21.56L19.84 13.23C20.2277 12.84 20.2277 12.21 19.84 11.82L10.19 2.15C10.0946 2.05428 9.96513 2.00033 9.83 2C9.69812 2.00188 9.57232 2.05579 9.48 2.15L8.77 2.85C8.57822 3.04781 8.57822 3.36219 8.77 3.56L9.57 4.36L2.44 11.49C2.15862 11.771 2.00035 12.1523 2 12.55ZM11 5.78L17.19 12H4.76L11 5.78ZM19.54 16H19.48C19.3793 15.9968 19.2829 16.0413 19.22 16.12C19.1899 16.1529 19.1587 16.1868 19.1266 16.2219C18.3467 17.0718 17 18.5396 17 19.5C17 20.8807 18.1193 22 19.5 22C20.8807 22 22 20.8807 22 19.5C22 18.5838 20.7064 17.1431 19.9251 16.2731C19.8707 16.2125 19.8188 16.1547 19.77 16.1C19.7095 16.0377 19.6268 16.0018 19.54 16Z"
-                  fill="#565656"></path>
-              </svg></span> Solid Color</a>
+          <a href="#"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M2 12.55V14.31C2.00035 14.7077 2.15862 15.089 2.44 15.37L8.63 21.56C8.91103 21.8414 9.29231 21.9996 9.69 22H10.45C10.8477 21.9996 11.229 21.8414 11.51 21.56L19.84 13.23C20.2277 12.84 20.2277 12.21 19.84 11.82L10.19 2.15C10.0946 2.05428 9.96513 2.00033 9.83 2C9.69812 2.00188 9.57232 2.05579 9.48 2.15L8.77 2.85C8.57822 3.04781 8.57822 3.36219 8.77 3.56L9.57 4.36L2.44 11.49C2.15862 11.771 2.00035 12.1523 2 12.55ZM11 5.78L17.19 12H4.76L11 5.78ZM19.54 16H19.48C19.3793 15.9968 19.2829 16.0413 19.22 16.12C19.1899 16.1529 19.1587 16.1868 19.1266 16.2219C18.3467 17.0718 17 18.5396 17 19.5C17 20.8807 18.1193 22 19.5 22C20.8807 22 22 20.8807 22 19.5C22 18.5838 20.7064 17.1431 19.9251 16.2731C19.8707 16.2125 19.8188 16.1547 19.77 16.1C19.7095 16.0377 19.6268 16.0018 19.54 16Z"
+                fill="#565656"></path>
+            </svg> <span>Solid Color</span> </a>
         </li>
         <li>
-          <a href="#"><span><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M16.5 10.9C16.822 10.3181 16.9939 9.66505 17 9V8C17 5.79086 15.2091 4 13 4H7C6.44772 4 6 4.44772 6 5V18C6 18.5523 6.44772 19 7 19H14C16.2091 19 18 17.2091 18 15V14C17.9932 12.7933 17.442 11.6542 16.5 10.9ZM13 7C13.5523 7 14 7.44772 14 8V9C14 9.55228 13.5523 10 13 10H9V7H13ZM14 16C14.5523 16 15 15.5523 15 15V14C15 13.4477 14.5523 13 14 13H9V16H14Z"
-                  fill="#565656"></path>
-              </svg></span> Brand Color</a>
+          <a href="#"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M16.5 10.9C16.822 10.3181 16.9939 9.66505 17 9V8C17 5.79086 15.2091 4 13 4H7C6.44772 4 6 4.44772 6 5V18C6 18.5523 6.44772 19 7 19H14C16.2091 19 18 17.2091 18 15V14C17.9932 12.7933 17.442 11.6542 16.5 10.9ZM13 7C13.5523 7 14 7.44772 14 8V9C14 9.55228 13.5523 10 13 10H9V7H13ZM14 16C14.5523 16 15 15.5523 15 15V14C15 13.4477 14.5523 13 14 13H9V16H14Z"
+                fill="#565656"></path>
+            </svg> <span>Brand Color</span></a>
         </li>
-        <!-- <li>
-          <a href="#"><span class="fa fa-paper-plane"></span> Contacts</a>
-        </li> -->
       </ul>
 
       <div class="footer">
 
       </div>
     </nav>
+    <!-- Side Navbar Ends Here -->
 
-    <!-- Page Content  -->
+
     <div id="content" class="p-3 p-md-3">
-
+      <!-- Horizontal Navbar Code Starts From here -->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
 
@@ -69,11 +65,11 @@
             <i class="fa fa-bars"></i>
             <span class="sr-only">Toggle Menu</span>
           </button>
-          <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
+          <!-- <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
             <i class="fa fa-bars"></i>
-          </button>
+          </button> -->
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="nav navbar-nav ml-auto">
@@ -93,82 +89,176 @@
           </div>
         </div>
       </nav>
+      <!-- Horizontal Navbar Code ends here -->
 
 
-      <h1>Latest Color Palettes</h1>
-      <p>
-        Thousands of beautiful color palettes you can use it directly by one click.</p>
-      <div class="row">
-        <div class="col-sm-3 palette-card">
-          <div class="palette-card-body">
-            <div class="palette_body" style="background-color: #a7ff83;">
-              <div class="color-hex"><span>#a7ff83</span></div>
+      <!-- Page Content  -->
+      <!-- Color Palettes Body/Container Starts From here -->
+      <div class="container">
+        <h1>Latest Color Palettes</h1>
+        <p>
+          Thousands of beautiful color palettes you can use it directly by one click.</p>
+
+        <!-- Row 1st Starts From here -->
+        <div class="row">
+          <!-- Column 1st starts from here -->
+          <div class="col-sm-3 palette-card">
+            <div class="palette-card-body">
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
             </div>
-            <div class="palette_body" style="background-color: #17b978;">
-              <div class="color-hex"><span>#17b978</span></div>
+          </div>
+
+          <!-- Column 2nd starts from here -->
+          <div class="col-sm-3  palette-card">
+            <div class="palette-card-body">
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
             </div>
-            <div class="palette_body" style="background-color: #086972;">
-              <div class="color-hex"><span>#086972</span></div>
+          </div>
+
+          <!-- Column 3rd starts from here -->
+          <div class="col-sm-3  palette-card">
+            <div class="palette-card-body">
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
             </div>
-            <div class="palette_body" style="background-color: #071a52;">
-              <div class="color-hex"><span>#071a52</span></div>
+          </div>
+
+          <!-- Column 4th starts from here -->
+          <div class="col-sm-3 palette-card">
+            <div class="palette-card-body">
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-sm-3  palette-card">
-          <div class="palette-card-body">
-            <div class="palette_body" style="background-color: #fc5185;">
-              <div class="color-hex"><span>#fc5185</span></div>
+        <!-- Row 1st Ends here -->
+
+
+        <!-- Row 2nd Starts From here -->
+        <div class="row">
+          <!-- Column 1st starts from here -->
+          <div class="col-sm-3 palette-card">
+            <div class="palette-card-body">
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
             </div>
-            <div class="palette_body" style="background-color: #364f6b;">
-              <div class="color-hex"><span>#364f6b</span></div>
+          </div>
+
+          <!-- Column 2nd starts from here -->
+          <div class="col-sm-3  palette-card">
+            <div class="palette-card-body">
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
             </div>
-            <div class="palette_body" style="background-color: #43dde6;">
-              <div class="color-hex"><span>#43dde6</span></div>
+          </div>
+
+          <!-- Column 3rd starts from here -->
+          <div class="col-sm-3  palette-card">
+            <div class="palette-card-body">
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
             </div>
-            <div class="palette_body" style="background-color: #f0f0f0">
-              <div class="color-hex"><span>#f0f0f0</span></div>
+          </div>
+
+          <!-- Column 4th starts from here -->
+          <div class="col-sm-3 palette-card">
+            <div class="palette-card-body">
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-sm-3  palette-card">
-          <div class="palette-card-body">
-            <div class="palette_body" style="background-color: #303481;">
-              <div class="color-hex"><span>#303481</span></div>
-            </div>
-            <div class="palette_body" style="background-color: #d6e6f2;">
-              <div class="color-hex"><span>#d6e6f2</span></div>
-            </div>
-            <div class="palette_body" style="background-color: #f5f5f5;">
-              <div class="color-hex"><span>#f5f5f5</span></div>
-            </div>
-            <div class="palette_body" style="background-color: #fff200">
-              <div class="color-hex"><span>#fff200</span></div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-3 palette-card">
-          <div class="palette-card-body">
-            <div class="palette_body" style="background-color: #05386b;">
-              <div class="color-hex"><span>#05386b</span></div>
-            </div>
-            <div class="palette_body" style="background-color: #5cdb95;">
-              <div class="color-hex"><span>#5cdb95</span></div>
-            </div>
-            <div class="palette_body" style="background-color: #8EE4af;">
-              <div class="color-hex"><span>#8EE4af</span></div>
-            </div>
-            <div class="palette_body" style="background-color: #edf5e1">
-              <div class="color-hex"><span>#edf5e1</span></div>
-            </div>
-          </div>
-        </div>
+        <!-- Row 2nd Starts From here -->
+
+        <!-- Copied Popup Box Code Here Below -->
+        <div class="copied">The color copied to clipboard. 🤟</div>
       </div>
-
-      <div class="copied">The color copied to clipboard. 🤟</div>
-
+      <!-- Color Palettes Body/Container Ends here -->
     </div>
   </div>
+
 
 
 
@@ -181,38 +271,6 @@
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
-  <script>
-    $('.palette_body').click(function () {
-      var input = $("<input>");
-      var color = $(this).children(".color-hex").text();
-      $('body').append(input);
-      input.val(color).select();
-      document.execCommand('copy');
-      input.remove();
-      $('.copied').fadeIn().delay(2000).fadeOut();
-    });
-
-
-    (function ($) {
-
-      "use strict";
-
-      var fullHeight = function () {
-
-        $('.js-fullheight').css('height', $(window).height());
-        $(window).resize(function () {
-          $('.js-fullheight').css('height', $(window).height());
-        });
-
-      };
-      fullHeight();
-
-      $('#sidebarCollapse').on('click', function () {
-        $('#sidebar').toggleClass('active');
-      });
-
-    })(jQuery);
-  </script>
   <script src="./script.js"></script>
 </body>
 
