Gradient Page added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>ColoroIn</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -20,14 +20,14 @@
       <h1><a href="index.html" class="logo">C.<sub>In</sub></a></h1>
       <ul class="list-unstyled components mb-5">
         <li class="active">
-          <a href="#"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <a href="index.html"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M4 3H10C10.5523 3 11 3.44772 11 4V8C11 8.55228 10.5523 9 10 9H4C3.44772 9 3 8.55228 3 8V4C3 3.44772 3.44772 3 4 3ZM5 7H9V5H5V7ZM10 11H4C3.44772 11 3 11.4477 3 12V20C3 20.5523 3.44772 21 4 21H10C10.5523 21 11 20.5523 11 20V12C11 11.4477 10.5523 11 10 11ZM5 19H9V13H5V19ZM20 15H14C13.4477 15 13 15.4477 13 16V20C13 20.5523 13.4477 21 14 21H20C20.5523 21 21 20.5523 21 20V16C21 15.4477 20.5523 15 20 15ZM15 19H19V17H15V19ZM20 3H14C13.4477 3 13 3.44772 13 4V12C13 12.5523 13.4477 13 14 13H20C20.5523 13 21 12.5523 21 12V4C21 3.44772 20.5523 3 20 3ZM15 11H19V5H15V11Z"
                 fill="#565656"></path>
             </svg> <span>Color Palettes</span> </a>
         </li>
         <li>
-          <a href="#"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <a href="gradients.html"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M19 3H5C3.89543 3 3 3.89543 3 5V19C3 20.1046 3.89543 21 5 21H19C20.1046 21 21 20.1046 21 19V5C21 3.89543 20.1046 3 19 3ZM19 5V12H17V10.25C17 10.1119 16.8881 10 16.75 10H15.25C15.1119 10 15 10.1119 15 10.25V12H13V10.25C13 10.1119 12.8881 10 12.75 10H11.25C11.1119 10 11 10.1119 11 10.25V12H9V10.25C9 10.1119 8.88807 10 8.75 10H7.25C7.11193 10 7 10.1119 7 10.25V12H5V5H19ZM7 12V14H9V12H7ZM11 12V14H13V12H11ZM15 12V14H17V12H15Z"
                 fill="#565656"></path>
@@ -252,6 +252,82 @@
         </div>
         <!-- Row 2nd Starts From here -->
 
+        <!-- Row 3rd Starts From Here -->
+        <div class="row">
+          <!-- Column 1st starts from here -->
+          <div class="col-sm-3 palette-card">
+            <div class="palette-card-body">
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Column 2nd starts from here -->
+          <div class="col-sm-3  palette-card">
+            <div class="palette-card-body">
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Column 3rd starts from here -->
+          <div class="col-sm-3  palette-card">
+            <div class="palette-card-body">
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Column 4th starts from here -->
+          <div class="col-sm-3 palette-card">
+            <div class="palette-card-body">
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+              <div class="palette_body">
+                <div class="color-hex"><span class="color_code"></span></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Row 3rd Ends Here -->
+
         <!-- Copied Popup Box Code Here Below -->
         <div class="copied">The color copied to clipboard. 🤟</div>
       </div>
@@ -271,7 +347,7 @@
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
-  <script src="./script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
