--- a/gradients.html
+++ b/gradients.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         .color_code {
             display: none;
@@ -93,10 +94,13 @@
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="index.html">Home</a>
-                            </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="#">
+                                    <i class="fa fa-search" aria-hidden="true"></i>
+                                    <input type="search" placeholder="Type gradient" id="search">
+                                </a>
+                            </li>
+                            <!-- <li class="nav-item">
                                 <a class="nav-link" href="#">About</a>
                             </li>
                             <li class="nav-item">
@@ -104,7 +108,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Contact</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </div>
@@ -115,9 +119,8 @@
             <!-- Page Content  -->
             <!-- Color Palettes Body/Container Starts From here -->
             <div class="container">
-                <h1>Latest Color Palettes</h1>
-                <p>
-                    Thousands of beautiful color palettes you can use it directly by one click.</p>
+                <h1>Gradients</h1>
+                <p>The best beautiful gradient colors collection ready to use.</p>
 
                 <!-- Row 1st Starts From here -->
                 <div class="row">
